--- a/test2.html
+++ b/test2.html
@@ -151,7 +151,7 @@
   },
   {
     name: 'ภาพยนตร์',
-    channels: [94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112],
+    channels: [94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129],
   },
     {
     name: 'ดูหนังออนไลน์',
@@ -260,6 +260,13 @@
       'Postman ไปรษณีย์ 4 โลก',
       'Logan - โลแกน เดอะ วูล์ฟเวอรีน',
       '4K Harry Potter and the Sorcerer s Stone',
+      '4K Harry Potter and the Chamber of Secrets',
+      '4K Harry Potter and the Prisoner of Azkaban',
+      '4K Harry Potter and the Goblet of Fire',
+      '4K Harry Potter and the Order of the Phoenix',
+      '4K Harry Potter and the Half-Blood Prince',
+      '4K Harry Potter and the Deathly Hallows: Part 1',
+      '4K Harry Potter and the Deathly Hallows: Part 2',
       'ผู้เช่า',
       'ผาดำคำไอ่',
       '404 สุขีนิรันดร์..',
@@ -369,6 +376,13 @@
       'https://cloud.ufxtv.com/images/vod/thumbs/yxncxoxpj3agjs5x65vk127t00zui8rr94rb9m5c8v0mz7okmt4s7bh53ha676yt.jpg',
       'https://cloud.ufxtv.com/images/vod/thumbs/ngu9kivd8sonyik71w7vfo388cxxh2j4jde3v9h425r0oc8q8flo4pwd1uajxtog.jpg',
       'https://cloud.ufxtv.com/images/vod/thumbs/j5ij3xiw0uy2lt57wnha5cg2x8m7v0xf6fy9cg5db4fwxl4u8m4eylhwu33q405a.png',
+      'https://cloud.ufxtv.com/images/vod/thumbs/3cgqcynf8nd2ev6saxemnons696qga1kmhazfyeolrq0mwswu7jhv792hgsxquhd.jpg?r=48',
+      'https://cloud.ufxtv.com/images/vod/thumbs/f3jskp5vtlsr7wlgiquhcbd6fgwjh2tx6dpr3vnwhfopca5v10cdbqkr7hbpj5mp.jpg?r=48',
+      'https://cloud.ufxtv.com/images/vod/thumbs/crcrpqgbh6b4241xblf7sp99527vxo89gl16bhhtntyqxzn8l3gdspnxsvtpk1z0.jpg?r=48',
+      'https://cloud.ufxtv.com/images/vod/thumbs/7r2xc26myvnd9zfs0v7enb0lsfpmmouugxrszxfys2c22rv2m2h9diu6xksj9mdp.jpg?r=48',
+      'https://cloud.ufxtv.com/images/vod/thumbs/m07yhpr5iqvgqjpbm5pevcco85ds7dtud0svpk08avo0feb1j1gfds3mxhe4u7y7.jpg?r=48',
+      'https://cloud.ufxtv.com/images/vod/thumbs/4jxykkshlcyybpnjo0ixnn3u39tal7xqqvobghs1tr05goo4o72cu56yfz9176ry.jpg?r=48',
+      'https://cloud.ufxtv.com/images/vod/thumbs/2f9iw1kqtkw98kexsg9mmgl1gu2n1ul39ul6w6xpqtzzeew6u6thmej38mq9gcdq.jpg?r=48',
       'https://img.inwiptv.net/postor/20250227112222wBrbYlOVXRfeefvfgeJI5btS1Ow.jpg',
       'https://img.inwiptv.net/postor/202503201153391pIrritKjpz6itW6GYLAItCbxqC.jpg',
       'https://img.inwiptv.net/postor/20250404060436z2TWhTRFzriygLygsjTbIHFYcQW.jpg',
@@ -487,6 +501,13 @@
       'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=yxncxoxpj3agjs5x65vk127t00zui8rr94rb9m5c8v0mz7okmt4s7bh53ha676yt&res=720&vod_sound=auto&kauth=',
       'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=ngu9kivd8sonyik71w7vfo388cxxh2j4jde3v9h425r0oc8q8flo4pwd1uajxtog&res=720&vod_sound=auto&kauth=',
       'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=j5ij3xiw0uy2lt57wnha5cg2x8m7v0xf6fy9cg5db4fwxl4u8m4eylhwu33q405a&res=720&vod_sound=auto&kauth=',
+      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=3cgqcynf8nd2ev6saxemnons696qga1kmhazfyeolrq0mwswu7jhv792hgsxquhd&res=720&vod_sound=auto&kauth=',
+      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=f3jskp5vtlsr7wlgiquhcbd6fgwjh2tx6dpr3vnwhfopca5v10cdbqkr7hbpj5mp&res=720&vod_sound=auto&kauth=',
+      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=crcrpqgbh6b4241xblf7sp99527vxo89gl16bhhtntyqxzn8l3gdspnxsvtpk1z0&res=720&vod_sound=auto&kauth=',
+      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=7r2xc26myvnd9zfs0v7enb0lsfpmmouugxrszxfys2c22rv2m2h9diu6xksj9mdp&res=720&vod_sound=auto&kauth=',
+      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=m07yhpr5iqvgqjpbm5pevcco85ds7dtud0svpk08avo0feb1j1gfds3mxhe4u7y7&res=720&vod_sound=auto&kauth=',
+      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=4jxykkshlcyybpnjo0ixnn3u39tal7xqqvobghs1tr05goo4o72cu56yfz9176ry&res=720&vod_sound=auto&kauth=',
+      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=2f9iw1kqtkw98kexsg9mmgl1gu2n1ul39ul6w6xpqtzzeew6u6thmej38mq9gcdq&res=720&vod_sound=auto&kauth=',
       'https://fw4free.com/player2.php?channel=1655580&id=53',
       'https://fw4free.com/player2.php?channel=1637922&id=53',
     ];
