--- a/digitaltv.html
+++ b/digitaltv.html
@@ -28,6 +28,10 @@
 #EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8
 
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL01 Moo7
+#EXTVLCOPT:network-caching=1000
+http://45.154.24.21:9091/Sport_tv_epl1/index.fmp4.m3u8
+
 #EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02
 #EXTVLCOPT:network-caching=1000
 #EXTVLCOPT:http-referrer=https://fw4free.com/
