--- a/digitaltv.html
+++ b/digitaltv.html
@@ -23,6 +23,10 @@
 ###กีฬา###
 ########################################
 
+ #EXTINF:-1 group-title="กีฬา" tvg-logo="https://raw.githubusercontent.com/devjob4475/devjob4475.github.io/refs/heads/main/assets/images/icon/4k.png",EPL 4K UHD
+#EXTVLCOPT:network-caching=1000
+http://45.154.24.21:9091/Sport_tv_t4k/index.fmp4.m3u8
+
 #EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL01
 #EXTVLCOPT:network-caching=1000
 #EXTVLCOPT:http-referrer=https://fw4free.com/
@@ -37,20 +41,36 @@ http://45.154.24.21:9091/Sport_tv_epl1/index.fmp4.m3u8
 #EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/ch2.stream/playlist.m3u8
 
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02 Moo7
+#EXTVLCOPT:network-caching=1000
+http://45.154.24.21:9091/Sport_tv_epl2/index.fmp4.m3u8
+
 #EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png",EPL03
 #EXTVLCOPT:network-caching=1000
 #EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/ch3.stream/playlist.m3u8
+
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png",EPL03 Moo7
+#EXTVLCOPT:network-caching=1000
+http://45.154.24.21:9091/Sport_tv_epl3/index.fmp4.m3u8
 
 #EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-4.png",EPL04
 #EXTVLCOPT:network-caching=1000
 #EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/ch4.stream/playlist.m3u8
 
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-4.png",EPL04 Moo7
+#EXTVLCOPT:network-caching=1000
+http://45.154.24.21:9091/Sport_tv_epl4/index.fmp4.m3u8
+
 #EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-5.png",EPL05
 #EXTVLCOPT:network-caching=1000
 #EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/ch5.stream/playlist.m3u8
+
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-5.png",EPL05 Moo7
+#EXTVLCOPT:network-caching=1000
+http://45.154.24.21:9091/Sport_tv_epl5/index.fmp4.m3u8
 
 #EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 1
 #EXTVLCOPT:network-caching=1000
