--- a/digitaltv.html
+++ b/digitaltv.html
@@ -77,15 +77,27 @@ http://45.154.24.21:9091/Sport_tv_epl5/index.fmp4.m3u8
 #EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/bein1.stream/playlist.m3u8
 
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 1 Moo7
+#EXTVLCOPT:network-caching=1000
+http://45.154.24.21:9091/Sport_tv_bein1/index.fmp4.m3u8
+
 #EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch7.png",BEIN 2
 #EXTVLCOPT:network-caching=1000
 #EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/bein2.stream/playlist.m3u8
 
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 2 Moo7
+#EXTVLCOPT:network-caching=10002
+http://45.154.24.21:9091/Sport_tv_bein2/index.fmp4.m3u8
+
 #EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch8.png",BEIN 3
 #EXTVLCOPT:network-caching=1000
 #EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/bein3.stream/playlist.m3u8
+
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 3 Moo7
+#EXTVLCOPT:network-caching=1000
+http://45.154.24.21:9091/Sport_tv_bein3/index.fmp4.m3u8
 
 }</style>
 
