--- a/digitaltv.html
+++ b/digitaltv.html
@@ -12729,82 +12729,127 @@ http://nextstep-sooyp4zfonli.stream-playlist.byteark.com:80/streams/TADsBRUThh65
 http://nextstep-sooyp4zfonli.stream-playlist.byteark.com:80/streams/TADsCKRJJiNi/playlist.m3u8 
 
 ########################################
-###กีฬา###
+###Moo7###
 ########################################
 
- #EXTINF:-1 group-title="กีฬา" tvg-logo="https://raw.githubusercontent.com/devjob4475/devjob4475.github.io/refs/heads/main/assets/images/icon/4k.png",EPL 4K UHD
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/sd-nbt.png",NBT
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_nbt/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-tpbs.png",THAIPBS
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_thaipbs/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://cms.dmpcdn.com/livetv/2020/07/14/72c22620-c5aa-11ea-a8d3-2b56c8ce453d_original.png",ALTV
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_altv/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-ch5.png",CH5
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_ch5/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/sd-tsports.png",TSPORT
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_tsport/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/sd-tptv.png",TPTV
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_tptv/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/sd-tnn24.png",TNN
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_tnn/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/sd-new.png",JKN
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_jkn/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-nation.png",NATION
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_nation/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-workpoint.png",WORKPOINT
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_workpoint/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/sd-24u.png",TRUE4U
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_true4u/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-gmm.png",GMM
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_gmm/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-ch8.png",CH8
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_ch8/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-mono.png",MONO
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_mono/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-mcot.png",MCOT
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_mcot/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-one.png",ONE
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_one/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-thairath.png",THAIRATH
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_thairath/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-ch3.png",CH3
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_ch3/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-amarin.png",AMARIN
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_amarin/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-ch7.png",CH7
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_ch7/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="DIGITAL TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/hd-pptv.png",PPTV
+#EXTVLCOPT:network-caching=1000
+http://moo7-restream2025.ddns.net:9091/Digital_tv_pptv/index.fmp4.m3u8
+ 
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://raw.githubusercontent.com/devjob4475/devjob4475.github.io/refs/heads/main/assets/images/icon/4k.png",EPL 4K UHD
 #EXTVLCOPT:network-caching=1000
 http://45.154.24.21:9091/Sport_tv_t4k/index.fmp4.m3u8
 
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL01
-#EXTVLCOPT:network-caching=1000
-#EXTVLCOPT:http-referrer=https://fw4free.com/
-https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8
 
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL01 Moo7
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL01 Moo7
 #EXTVLCOPT:network-caching=1000
 http://45.154.24.21:9091/Sport_tv_epl1/index.fmp4.m3u8
 
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02
-#EXTVLCOPT:network-caching=1000
-#EXTVLCOPT:http-referrer=https://fw4free.com/
-https://fw4free.inwstream.com/fw4free/ch2.stream/playlist.m3u8
-
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02 Moo7
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02 Moo7
 #EXTVLCOPT:network-caching=1000
 http://45.154.24.21:9091/Sport_tv_epl2/index.fmp4.m3u8
 
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png",EPL03
-#EXTVLCOPT:network-caching=1000
-#EXTVLCOPT:http-referrer=https://fw4free.com/
-https://fw4free.inwstream.com/fw4free/ch3.stream/playlist.m3u8
-
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png",EPL03 Moo7
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png",EPL03 Moo7
 #EXTVLCOPT:network-caching=1000
 http://45.154.24.21:9091/Sport_tv_epl3/index.fmp4.m3u8
 
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-4.png",EPL04
-#EXTVLCOPT:network-caching=1000
-#EXTVLCOPT:http-referrer=https://fw4free.com/
-https://fw4free.inwstream.com/fw4free/ch4.stream/playlist.m3u8
-
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-4.png",EPL04 Moo7
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-4.png",EPL04 Moo7
 #EXTVLCOPT:network-caching=1000
 http://45.154.24.21:9091/Sport_tv_epl4/index.fmp4.m3u8
 
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-5.png",EPL05
-#EXTVLCOPT:network-caching=1000
-#EXTVLCOPT:http-referrer=https://fw4free.com/
-https://fw4free.inwstream.com/fw4free/ch5.stream/playlist.m3u8
-
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-5.png",EPL05 Moo7
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-5.png",EPL05 Moo7
 #EXTVLCOPT:network-caching=1000
 http://45.154.24.21:9091/Sport_tv_epl5/index.fmp4.m3u8
 
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 1
-#EXTVLCOPT:network-caching=1000
-#EXTVLCOPT:http-referrer=https://fw4free.com/
-https://fw4free.inwstream.com/fw4free/bein1.stream/playlist.m3u8
-
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 1 Moo7
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 1 Moo7
 #EXTVLCOPT:network-caching=1000
 http://45.154.24.21:9091/Sport_tv_bein1/index.fmp4.m3u8
 
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch7.png",BEIN 2
-#EXTVLCOPT:network-caching=1000
-#EXTVLCOPT:http-referrer=https://fw4free.com/
-https://fw4free.inwstream.com/fw4free/bein2.stream/playlist.m3u8
-
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 2 Moo7
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 2 Moo7
 #EXTVLCOPT:network-caching=10002
 http://45.154.24.21:9091/Sport_tv_bein2/index.fmp4.m3u8
 
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch8.png",BEIN 3
-#EXTVLCOPT:network-caching=1000
-#EXTVLCOPT:http-referrer=https://fw4free.com/
-https://fw4free.inwstream.com/fw4free/bein3.stream/playlist.m3u8
-
-#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 3 Moo7
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 3 Moo7
 #EXTVLCOPT:network-caching=1000
 http://45.154.24.21:9091/Sport_tv_bein3/index.fmp4.m3u8
 
