--- a/digitaltv.html
+++ b/digitaltv.html
@@ -12829,6 +12829,14 @@ http://moo7-restream2025.ddns.net:9091/Sport_tv_epl1/index.fmp4.m3u8
 #EXTVLCOPT:network-caching=1000
 http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186561&extension=m3u8
 
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL01 Blue2
+#EXTVLCOPT:network-caching=1000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186574&extension=m3u8
+
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL01 Blue3
+#EXTVLCOPT:network-caching=1000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186575&extension=m3u8
+
 #EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02 Moo7
 #EXTVLCOPT:network-caching=1000
 http://moo7-restream2025.ddns.net:9091/Sport_tv_epl2/index.fmp4.m3u8
