--- a/digitaltv.html
+++ b/digitaltv.html
@@ -12854,13 +12854,53 @@ http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186564&extension=
 #EXTVLCOPT:network-caching=1000
 http://moo7-restream2025.ddns.net:9091/Sport_tv_epl2/index.fmp4.m3u8
 
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02 blue
+#EXT-X-VERSION:3
+#EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186565&extension=m3u8
+
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02 blue2
+#EXT-X-VERSION:3
+#EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186566&extension=m3u8
+
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02 blue3
+#EXT-X-VERSION:3
+#EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186567&extension=m3u8
+
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-2.png",EPL02 blue4
+#EXT-X-VERSION:3
+#EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186576&extension=m3u8
+
 #EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png",EPL03 Moo7
 #EXTVLCOPT:network-caching=1000
 http://moo7-restream2025.ddns.net:9091/Sport_tv_epl3/index.fmp4.m3u8
 
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png",EPL03 green
+#EXT-X-VERSION:3
+#EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186568&extension=m3u8
+
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png",EPL03 green2
+#EXT-X-VERSION:3
+#EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186569&extension=m3u8
+
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-3.png",EPL03 green3
+#EXT-X-VERSION:3
+#EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186570&extension=m3u8
+
 #EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-4.png",EPL04 Moo7
 #EXTVLCOPT:network-caching=1000
 http://moo7-restream2025.ddns.net:9091/Sport_tv_epl4/index.fmp4.m3u8
+
+#EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-4.png",EPL04 blue
+#EXT-X-VERSION:3
+#EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=10000000
+http://tbtv.me:2095/play/live.php?mac=00:1a:79:80:09:03&stream=186581&extension=m3u8
 
 #EXTINF:-1 group-title="SPORT TV" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-5.png",EPL05 Moo7
 #EXTVLCOPT:network-caching=1000
